# wave_function_collapse_ui

./: CMakeLists.txt  main.cpp
src/: AbstractSideMenu.h  utils.cpp  utils.h
src/graphics_items/: BoardContainer.cpp  BoardContainer.h  ButtonGroup.cpp  ButtonGroup.h  CellGraphicsItem.cpp  CellGraphicsItem.h  GridTile.cpp  GridTile.h  ImageGenerationCanvas.cpp  ImageGenerationCanvas.h  SudokuControlsMenu.cpp  SudokuControlsMenu.h
src/models/: BlockState.cpp  BlockState.h  Cell.cpp  Cell.h  CellState.cpp  CellState.h  SudokuBlock.cpp  SudokuBlock.h  SudokuBoard.cpp  SudokuBoard.h  Tile.cpp  Tile.h  TiledModelRule.cpp  TiledModelRule.h  TiledModel_ImageGrid.cpp  TiledModel_ImageGrid.h  TiledRuleModel.cpp  TiledRuleModel.h
src/scenes/: AbstractScene.h  ImageGenerationScene.cpp  ImageGenerationScene.h  SudokuScene.cpp  SudokuScene.h
src/styles/: styles.json
src/ui_forms/: ImageGenerationSideMenu.cpp  ImageGenerationSideMenu.h  graphicsworkspace.cpp  graphicsworkspace.h  graphicsworkspace.ui  sudokuscenesidemenu.cpp  sudokuscenesidemenu.h  sudokuscenesidemenu.ui  wavefunctioncollapseapp.cpp  wavefunctioncollapseapp.h  wavefunctioncollapseapp.ui
src/widgets/: Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  CheckBox.cpp  CheckBox.h  Slider.cpp  Slider.h  SliderGroup.cpp  SliderGroup.h
